--- a/www/css/index.css
+++ b/www/css/index.css
@@ -52,11 +52,41 @@ body {
     justify-content: center;
     align-items: center;
 }
-#resetButton {
-    position: fixed;
-    top: 0;
-    left: 0;
+
+.hidden {
+    display: none;
+}
+
+#menu {
+    width: 100%;
+    height: 100%;
+    background: black;
+}
+
+#menuButton {
     background: orange;
+    position: fixed;
+    left: 0;
+    top: 0;
+}
+
+#closeMenuButton {
+    background: orange;
+}
+
+#resetButton {
+    background: red;
+}
+
+.seconds {
+    background: brown;
+    border: 2px solid #444;
+    border-radius: 2px;
+    padding: 4px 10px;
+}
+
+.seconds.selected {
+    background: #888;
 }
 
 /* Landscape layout (with min-width) */
